--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -155,9 +155,10 @@ url("./header.css"); */
 @import url("./toast.css");
 @import url("./headercarousel.css");
 @import url("./cardbodycarousel.css");
-@import url("./category-slider.css");
-
+ 
 @import url("./dashboard.css");
+@import url("./CategorySlider.css");
+@import url("./SubCategorySlider.css");
 .rtl {
   direction: rtl;
   text-align: right;
